force-app/main/default/objects/ampi__ManageIndicators__c/ampi__ManageIndicators__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customize the interface for the Manage Indicators page by selecting whether or not to display buttons and/or provide a view-only interface for specific users/profiles.</description>
    <label>Manage Indicators</label>
</CustomObject>