force-app/main/default/objects/ampi__ManageIndicators__c/fields/ampi__Hide_Add_New_Custom_Indicator_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Add_New_Custom_Indicator_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Add New Custom Indicator Button</label>
    <type>Checkbox</type>
</CustomField>