force-app/main/default/objects/ampi__ManageIndicators__c/fields/ampi__Hide_Indicators_Catalog_Tab__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Indicators_Catalog_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Indicators Catalog Tab</label>
    <type>Checkbox</type>
</CustomField>