force-app/main/default/objects/ampi__ManageIndicators__c/fields/ampi__Hide_Refresh_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Refresh_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Refresh Icon</label>
    <type>Checkbox</type>
</CustomField>