force-app/main/default/objects/ampi__ManageIndicators__c/fields/ampi__Hide_Refresh_Indicators_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Refresh_Indicators_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Refresh Indicators Button</label>
    <type>Checkbox</type>
</CustomField>